FIX overflow of link to the gaps between the boxes #429

--- a/src/sass/partials/layouts/_team.scss
+++ b/src/sass/partials/layouts/_team.scss
@@ -18,9 +18,9 @@
   .card-link {
     text-decoration: none;
     color: inherit;
+    margin-right: 3.18rem;
   }
   .member-card {
-    width: 80%;
     height: auto;
     margin: 10px 0px;
     border-radius: 2px;
